Collection export MVC

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -25,3 +25,16 @@ en:
     toolbar:
       profile:
         edit_registration: 'Change password'
+  collection_export:
+    title:
+    header:
+      collection_id: "Collection id"
+      timestamp: "Timestamp"
+      destroy: "Delete"
+      download: "File"
+    action:
+      destroy: "Delete"
+      download: "Download"
+      confirm_destroy: "Click OK to delete this export or Cancel to cancel this operation."
+    create_confirmation: "Collection export was successfully created."
+    destroy_confirmation: "Collection export was successfully deleted."
