--- a/config/locales/hyrax.en.yml
+++ b/config/locales/hyrax.en.yml
@@ -58,3 +58,10 @@ en:
     user_profile:
       first_name: "First Name"
       last_name: "Last Name"
+    collection:
+      actions:
+        export_collection: "Export Collection"
+    dashboard:
+      my:
+        action:
+          export_collection: "Export collection"
