add collection export link

--- a/config/locales/hyrax.en.yml
+++ b/config/locales/hyrax.en.yml
@@ -62,6 +62,7 @@ en:
     collection:
       actions:
         export_collection: "Export Collection"
+        manage_exports: "Manage Exports"
     dashboard:
       my:
         action:
