Adds locales files for all work types.

--- a/config/locales/etd.en.yml
+++ b/config/locales/etd.en.yml
@@ -4,5 +4,56 @@ en:
       etd:     'fa fa-file-text-o'
     select_type:
       etd:
-        description:        "Etd works"
         name:               "Etd"
+        description:        "Must be submitted by the UC Graduate School"
+  simple_form:
+    labels:
+      etd:
+        geo_subject:      "Geographic Subject"
+        description:      "Abstract"
+        keyword:          "Keyword"
+        creator:          "Creator"
+        date_created: "Degree Date"
+        related_url:      "External Link"
+        files:            "Upload a new version of this file from your computer"
+        collection_ids:   "Add as member of collection"
+        admin_set_id:     "Administrative Set"
+        alternate_title:  "Alternate Title"
+        time_period:      "Time Period"
+        note:             "Note"
+        required_software: "Required Software"
+        advisor:          "Advisor"
+        committee_member: "Committee Member"
+        degree:           "Degree" 
+        degree_date:      "Degree Year"
+        genre:            "Type" 
+        etd_publisher:    "Publisher (Required for DOI registration)" 
+        college:          "College"
+        department:       "Degree Program"
+    hints:
+      etd:
+        resource: "Pre-defined categories to describe the type of content being uploaded, such as &quot;article&quot; or &quot;dataset.&quot;  More than one type may be selected."
+        title: "<p>Enter the title of the ETD, including the subtitle.</p>"
+        subject: "<p>Enter terms or keywords that describe the ETD.</p>"
+        creator: "<p>Enter the author of the ETD. Please enter the name in <i>LastName, FirstName</i> order.</p>"
+        related_url: "A link to a website or other specific content (audio, video, PDF document) related to the work. An example is the URL of a research project from which the work was derived."
+        geo_subject: "Enter the geographic subject of the ETD.</br>Examples:</br><ul><li>Cincinnati, Ohio</li><li>Vancouver, British Columbia</li><li>Sahara Desert</li></ul>"
+        contributor: "A person or group you want to recognize for playing a role in the creation of the work, but not the primary role."
+        date_created: "The year the degree was granted."
+        description: "Enter the abstract of the ETD. There is no character limit for this field.</p>"
+        identifier: "A unique handle identifying the work. An example would be a DOI for a journal article, or an ISBN or OCLC number for a book."
+        language: "Enter the language of your work.</br>Examples:</br><ul><li>English</li><li>Spanish</li><li>Arabic</li></ul>"
+        etd_publisher: "Enter the publisher associated with the ETD, typically the University of Cincinnati."
+        rights: "Licensing and distribution information governing access to the work. Select from the provided drop-down list."
+        alternate_title: "<p>Enter an alternate title for ETD. An alternate title could include acronyms, abbreviations, or a series title.</p>"
+        time_period: "Enter the period or date associated with the subject of your work.</br>Examples:</br><ul><li>19th century</li><li>Middle Ages</li><li>Jurassic Period</li></ul>"
+        note: "<p>Enter any additional information about the ETD.</p>"
+        required_software: "<p>Special software needed to open the ETD.</p>"
+        advisor: "The faculty advisor or sponsor for this work, in <i>LastName, FirstName</i> format."
+        committee_member: "Enter any additional members of the thesis/dissertation committee. Please enter the name in LastName, FirstName order."
+        degree: "The degree associated with this work, if the work was completed as part of a thesis or capstone. Please enter the abbreviation for the degree, e.g., BA or MS."
+        genre: "Select the type of your work. If you are unsure about the type, please select 'Other'."
+        publisher: "Enter the publisher of your work. If this has not been previously published, University of Cincinnati is an appropriate publisher."
+        required_software: "Special software needed to open the work"
+        college: "Select the college associated with the ETD."
+        department: "Enter the degree program associated with the ETD."
