--- a/config/locales/article.en.yml
+++ b/config/locales/article.en.yml
@@ -4,5 +4,49 @@ en:
       article:     'fa fa-file-text-o'
     select_type:
       article:
-        description:        "Article works"
         name:               "Article"
+        description:        "Published or unpublished articles"
+  simple_form:
+    labels:
+      article:
+        geo_subject:      "Geographic Subject"
+        creator:          "Author"
+        description:      "Abstract"
+        date_created:     "Date Created"
+        related_url:      "External Link"
+        files:            "Upload a new version of this file from your computer"
+        collection_ids:   "Add as member of collection"
+        admin_set_id:     "Administrative Set"
+        journal_title:    "Journal Title"
+        issn:             "ISSN"
+        time_period:      "Time Period"
+        language:         "Language"
+        required_software: "Required Software"
+        note:             "Note"
+        publisher:        "Publisher (Required for DOI registration)"
+        college:          "College"
+        department:       "Program or Department"
+    hints:
+      article:
+        resource: "Pre-defined categories to describe the type of content being uploaded, such as &quot;article&quot; or &quot;dataset.&quot;  More than one type may be selected."
+        title: "Enter the title of your Article. If the Article doesn't have a title, please enter a brief descriptive label."
+        subject: "Enter terms or keywords that describe your Article.</br>Examples:</br><ul><li>Biology</li><li>Art History</li><li>Economics</li></ul>"
+        creator: "Enter the names of creators of the Article, in <i>LastName, FirstName</i> format. These could include important authors, co-authors, or other significant contributors."
+        related_url: "A link to a website or other specific content (audio, video, PDF document) related to the work. An example is the URL of a research project from which the work was derived."
+        geo_subject: "Enter the geographic subject of your Article.</br>Examples:</br><ul><li>Cincinnati, Ohio</li><li>Vancouver, British Columbia</li><li>Sahara Desert</li></ul>"
+        contributor: "A person or group you want to recognize for playing a role in the creation of the work, but not the primary role."
+        date_created: "Date when the contents of the Article were created. Enter date formatted as: YYYY or YYYY-MM or YYYY-MM-DD.  Example:</br>January 30, 1950 should be entered 1950-01-30"
+        description: "Enter the abstract of your Article. There is no character limit for this field."
+        identifier: "A unique handle identifying the work. An example would be a DOI for a journal article, or an ISBN or OCLC number for a book."
+        language: "The language of the work's content."
+        alternate_title: "Enter an alternate title for your Article. An alternate title could include acronyms, abbreviations, or a series title."
+        journal_title: "Title of the Journal where the Article was originally published, if applicable."
+        issn: "ISSN of the Journal where the Article was originally published, if applicable."
+        time_period: "Enter the period or date associated with the subject of your Article.</br>Examples:</br><ul><li>19th century</li><li>Middle Ages</li><li>Jurassic Period</li></ul>"
+        language: "Enter the language of your Article.</br>Examples:</br><ul><li>English</li><li>Spanish</li><li>Arabic</li></ul>"
+        required_software: "Special software needed to open the Article"
+        note: "Enter any additional information about your Article."
+        publisher: "Enter the publisher of your Article. If this has not been previously published,<i> University of Cincinnati</i> is an appropriate publisher."
+        rights: "Who should be able to view or download this content?"
+        college: "Select the college associated with the submitter of this work."
+        department: "Enter the department associated with the submitter of this work."
