--- a/config/locales/image.en.yml
+++ b/config/locales/image.en.yml
@@ -4,5 +4,49 @@ en:
       image:     'fa fa-file-text-o'
     select_type:
       image:
-        description:        "Image works"
         name:               "Image"
+        description:        "Visual content: art, photographs, posters, graphics."
+  simple_form:
+    labels:
+      image:
+        geo_subject:      "Geographic Subject"
+        description:      "Description"
+        keyword:          "Keyword"
+        date_created:     "Date Created"
+        related_url:      "External Link"
+        files:            "Upload a new version of this file from your computer"
+        collection_ids:   "Add as member of collection"
+        admin_set_id:     "Administrative Set"
+        source:           "Source"
+        publisher:        "Publisher (Required for DOI registration)"
+        alternate_title:  "Alternate Title"
+        genre:            "Genre"
+        time_period:      "Time Period"
+        note:             "Note"
+        required_software: "Required Software" 
+        college:          "College"
+        department:       "Program or Department"
+    hints:
+      image:
+        resource: "Pre-defined categories to describe the type of content being uploaded, such as &quot;article&quot; or &quot;dataset.&quot;  More than one type may be selected."
+        title: "Enter the title of your Image. If the Image doesn't have a title, please enter a brief descriptive label."
+        keyword: "Words or phrases you select to describe what the work is about. These are used to search for content."
+        subject: "Headings or index terms describing what the work is about; these do need to conform to an existing vocabulary."
+        creator: "Enter the names of creators of the Image, in<i> LastName, FirstName</i> format. These could include important authors, co-authors, or other significant contributors."
+        related_url: "A link to a website or other specific content (audio, video, PDF document) related to the work. An example is the URL of a research project from which the work was derived."
+        geo_subject: "Enter the geographic subject of your Image.</br>Examples:</br><ul><li>Cincinnati, Ohio</li><li>Vancouver, British Columbia</li><li>Sahara Desert</li></ul>"
+        contributor: "A person or group you want to recognize for playing a role in the creation of the work, but not the primary role."
+        date_created: "Date when the contents of the Image were created. Enter date formatted as: YYYY or YYYY-MM or YYYY-MM-DD. Example:</br>January 30, 1950 should be entered 1950-01-30"
+        description: "Enter a summary of your Image. There is no character limit for this field."
+        identifier: "A unique handle identifying the work. An example would be a DOI for a journal article, or an ISBN or OCLC number for a book."
+        language: "Enter the name of culture, people, or adjectival form of country associated with the subject of your Image.</br>Examples:</br><ul><li>American</li><li>Vietnamese</li><li>Inuit</li></ul>"
+        publisher: "Enter the publisher of your Image. If this has not been previously published,<i> University of Cincinnati</i> is an appropriate publisher."
+        rights: "Licensing and distribution information governing access to the work. Select from the provided drop-down list."
+        source: "Information source assoicated with the work and/or source of Image, i.e., publication, vendor, donor.  Examples:</br><ul><li>Image found in Scobey, David M. Empire City. Philadelphia: Temple Univ Press, 2002: 106.</li><li>Donated by Walter E. Langsam</li></ul>"
+        alternate_title: "Enter an alternate title for your Image. An alternate title could include acronyms, abbreviations, or a series title."
+        genre: "Select a genre matching your Image."
+        time_period: "Enter the period or date associated with the subject of your Image.</br>Examples:</br><ul><li>19th century</li><li>Middle Ages</li><li>Jurassic Period</li></ul>"
+        note: "Enter any additional information about your Image."
+        required_software: "Special software needed to open the Image."
+        college: "Select the college associated with the submitter of this work."
+        department: "Enter the department associated with the submitter of this work."
