--- a/config/locales/student_work.en.yml
+++ b/config/locales/student_work.en.yml
@@ -4,5 +4,50 @@ en:
       student_work:     'fa fa-file-text-o'
     select_type:
       student_work:
-        description:        "Student work works"
         name:               "Student Work"
+        description:        "Deposit any kind of student work (excluding Theses and Dissertations)."
+  simple_form:
+    labels:
+      student_work:
+        geo_subject:       "Geographic Subject"
+        description:      "Description"
+        date_created:     "Date Created"
+        related_url:      "External Link"
+        files:            "Upload a new version of this file from your computer"
+        collection_ids:   "Add as member of collection"
+        admin_set_id:     "Administrative Set"
+        alternate_title:  "Alternate Title"
+        genre:            "Type of Work"
+        time_period:       "Time Period"
+        require_software: "Required Software"
+        note:             "Note"
+        publisher:        "Publisher (Required for DOI registration)"
+        degree:           "Degree"
+        advisor:          "Advisor"
+        college:          "College"
+        department:       "Program or Department"
+    hints:
+      student_work:
+        resource: "Pre-defined categories to describe the type of content being uploaded, such as &quot;article&quot; or &quot;dataset.&quot;  More than one type may be selected."
+        title: "Enter the title of your work. If the work doesn't have a title, please enter a brief descriptive label."
+        subject: "Enter terms or keywords that describe your work.</br>Examples:</br><ul><li>Biology</li><li>Art History</li><li>Economics</li></ul>"
+        creator: "Enter the names of creators of the work, in <i> LastName, FirstName </i> format. These could include important authors, co-authors, or other significant contributors."
+        related_url: "A link to a website or other specific content (audio, video, PDF document) related to the work. An example is the URL of a research project from which the work was derived."
+        geo_subject: "Enter the geographic subject of your work.</br>Examples:</br><ul><li>Cincinnati, Ohio</li><li>Vancouver, British Columbia</li><li>Sahara Desert</li></ul>"
+        contributor: "A person or group you want to recognize for playing a role in the creation of the work, but not the primary role."
+        date_created: "Date when the contents of the work were created. Enter date formatted as: YYYY or YYYY-MM or YYYY-MM-DD.  Example:</br>January 30, 1950 should be entered 1950-01-30"
+        description: "Enter a summary of your work. Please include any presentations or awards assocaited with this work here. There is no character limit for this field."
+        identifier: "A unique handle identifying the work. An example would be a DOI for a journal article, or an ISBN or OCLC number for a book."
+        language: "Enter the language of your work.</br>Examples:</br><ul><li>English</li><li>Spanish</li><li>Arabic</li></ul>"
+        publisher: "The person or group making the work available. Generally this is the institution."
+        rights: "Licensing and distribution information governing access to the work. Select from the provided drop-down list."
+        alterante_title: "Enter an alternate title for your work. An alternate title could include acronyms, abbreviations, or a series title."
+        genre: "Select the type of your work."
+        time_period: "Enter the period or date associated with the subject of your work.</br>Examples:</br><ul><li>19th century</li><li>Middle Ages</li><li>Jurassic Period</li></ul>"
+        required_software: "Special software needed to open the work"
+        note: "Enter any additional information about your work."
+        degree: "The degree associated with this work, if the work was completed as part of a thesis or capstone. Please enter the abbreviation for the degree, e.g., BA or MS."
+        advisor: "The faculty advisor or sponsor for this work, in<i> LastName, FirstName</i> format."
+        alternate_title: "Enter an alternate title for your work. An alternate title could include acronyms, abbreviations, or a series title."
+        college: "Select the college associated with the submitter of this work."
+        department: "Enter the department associated with the submitter of this work."
