--- a/config/locales/hyrax.en.yml
+++ b/config/locales/hyrax.en.yml
@@ -78,3 +78,5 @@ en:
           export_collection: "Export collection"
     welcome:
       waive_page: "Click here to hide this welcome page from displaying when you log in"
+    controls:
+      users: "People"
