--- a/config/locales/hyrax.en.yml
+++ b/config/locales/hyrax.en.yml
@@ -86,3 +86,5 @@ en:
         note_html: Restrict access to logged-in users
     controls:
       users: "People"
+    dataset:
+      help_text: If you would like guidance on submitting a dataset, please read the <a href="/documenting_data" target="_blank">Documenting Data</a> help page.
