--- a/config/locales/document.en.yml
+++ b/config/locales/document.en.yml
@@ -3,7 +3,7 @@ en:
     icons:
       document:     'fa fa-file-text-o'
     select_type:
-      document:
+      Document:
         name:               "Document"
         description:        "Text-based works other than articles: books, manuscripts, etc."
   simple_form:
