--- a/config/locales/document.zh.yml
+++ b/config/locales/document.zh.yml
@@ -3,7 +3,7 @@ zh:
     icons:
       document:     'fa fa-file-text-o'
     select_type:
-      document:
+      Document:
         # TODO: translate `human_name` into Chinese
         description:        "Document 作品"
         name:               "Document"
