--- a/config/locales/generic_work.zh.yml
+++ b/config/locales/generic_work.zh.yml
@@ -3,7 +3,7 @@ zh:
     icons:
       generic_work:     'fa fa-file-text-o'
     select_type:
-      generic_work:
+      GenericWork:
         # TODO: translate `human_name` into Chinese
         description:        "Generic work 作品"
         name:               "Generic Work"
