--- a/config/locales/image.zh.yml
+++ b/config/locales/image.zh.yml
@@ -3,7 +3,7 @@ zh:
     icons:
       image:     'fa fa-file-text-o'
     select_type:
-      image:
+      Image:
         # TODO: translate `human_name` into Chinese
         description:        "Image 作品"
         name:               "Image"
