--- a/config/locales/medium.es.yml
+++ b/config/locales/medium.es.yml
@@ -3,7 +3,7 @@ es:
     icons:
       medium:     'fa fa-file-text-o'
     select_type:
-      medium:
+      Medium:
         # TODO: translate `human_name` into Spanish
         description:        "Medium trabajos"
         name:               "Medium"
