--- a/config/locales/student_work.zh.yml
+++ b/config/locales/student_work.zh.yml
@@ -3,7 +3,7 @@ zh:
     icons:
       student_work:     'fa fa-file-text-o'
     select_type:
-      student_work:
+      StudentWork:
         # TODO: translate `human_name` into Chinese
         description:        "Student work 作品"
         name:               "Student Work"
