rename descriptions tab to metadata

--- a/config/locales/hyrax.en.yml
+++ b/config/locales/hyrax.en.yml
@@ -126,3 +126,7 @@ en:
       profile:
         view: 'View Profile'
         edit: 'Edit Profile'
+    works:
+      form:
+        tab:
+          metadata: "Metadata"
