--- a/config/locales/etd.en.yml
+++ b/config/locales/etd.en.yml
@@ -27,7 +27,7 @@ en:
         degree:           "Degree"
         degree_date:      "Degree Year"
         genre:            "Type"
-        etd_publisher:    "Publisher (Required for DOI registration)"
+        publisher:    "Publisher (Required for DOI registration)"
         college:          "College"
         department:       "Degree Program"
     hints:
@@ -43,7 +43,7 @@ en:
         description: "Enter the abstract of the ETD. There is no character limit for this field.</p>"
         identifier: "A unique handle identifying the work. An example would be a DOI for a journal article, or an ISBN or OCLC number for a book."
         language: "Enter the language of your work.</br>Examples:</br><ul><li>English</li><li>Spanish</li><li>Arabic</li></ul>"
-        etd_publisher: "Enter the publisher associated with the ETD, typically the University of Cincinnati."
+        publisher: "Enter the publisher associated with the ETD, typically the University of Cincinnati."
         rights: "Licensing and distribution information governing access to the work. Select from the provided drop-down list."
         alternate_title: "<p>Enter an alternate title for ETD. An alternate title could include acronyms, abbreviations, or a series title.</p>"
         time_period: "Enter the period or date associated with the subject of your work.</br>Examples:</br><ul><li>19th century</li><li>Middle Ages</li><li>Jurassic Period</li></ul>"
@@ -53,7 +53,6 @@ en:
         committee_member: "Enter any additional members of the thesis/dissertation committee. Please enter the name in LastName, FirstName order."
         degree: "The degree associated with this work, if the work was completed as part of a thesis or capstone. Please enter the abbreviation for the degree, e.g., BA or MS."
         genre: "Select the type of your work. If you are unsure about the type, please select 'Other'."
-        publisher: "Enter the publisher of your work. If this has not been previously published, University of Cincinnati is an appropriate publisher."
         required_software: "Special software needed to open the work"
         college: "Select the college associated with the ETD."
         department: "Enter the degree program associated with the ETD."
