--- a/config/locales/hyrax.en.yml
+++ b/config/locales/hyrax.en.yml
@@ -58,6 +58,10 @@ en:
     batch_uploads:
       files:
         upload_type_instructions: 'Note: To create a single work for all the files, '
+    contact_form:
+      header: Contact the Scholar@UC Team
+      notice_html: 'Please us this form to send questions, feedback, or report a problem to the Scholar@UC team. You can also check %{href} for more information'
+      help_resources_href: 'Help Resources'
     passive_consent_to_agreement: I have read and agree to the
     homepage:
       featured_works:
