--- a/config/locales/etd.en.yml
+++ b/config/locales/etd.en.yml
@@ -3,7 +3,7 @@ en:
     icons:
       etd:     'fa fa-file-text-o'
     select_type:
-      Etd:
+      etd:
         name:               "Etd"
         description:        "Must be submitted by the UC Graduate School"
   simple_form:
