--- a/config/locales/etd.zh.yml
+++ b/config/locales/etd.zh.yml
@@ -3,7 +3,7 @@ zh:
     icons:
       etd:     'fa fa-file-text-o'
     select_type:
-      Etd:
+      etd:
         # TODO: translate `human_name` into Chinese
         description:        "Etd 作品"
         name:               "Etd"
