--- a/config/locales/generic_work.es.yml
+++ b/config/locales/generic_work.es.yml
@@ -3,7 +3,7 @@ es:
     icons:
       generic_work:     'fa fa-file-text-o'
     select_type:
-      GenericWork:
+      generic_work:
         # TODO: translate `human_name` into Spanish
         description:        "Generic work trabajos"
         name:               "Generic Work"
