--- a/config/locales/image.es.yml
+++ b/config/locales/image.es.yml
@@ -3,7 +3,7 @@ es:
     icons:
       image:     'fa fa-file-text-o'
     select_type:
-      Image:
+      image:
         # TODO: translate `human_name` into Spanish
         description:        "Image trabajos"
         name:               "Image"
