--- a/config/locales/medium.en.yml
+++ b/config/locales/medium.en.yml
@@ -3,7 +3,7 @@ en:
     icons:
       medium:     'fa fa-file-text-o'
     select_type:
-      Medium:
+      medium:
         name:               "Media"
         description:        "Works that include video, film, slide, or audio are referred to as time-based media."
   simple_form:
