--- a/config/locales/student_work.es.yml
+++ b/config/locales/student_work.es.yml
@@ -3,7 +3,7 @@ es:
     icons:
       student_work:     'fa fa-file-text-o'
     select_type:
-      StudentWork:
+      student_work:
         # TODO: translate `human_name` into Spanish
         description:        "Student work trabajos"
         name:               "Student Work"
