--- a/config/locales/hyrax.en.yml
+++ b/config/locales/hyrax.en.yml
@@ -124,6 +124,9 @@ en:
       my:
         action:
           export_collection: "Export collection"
+      collections:
+        show:
+          item_count: Items in this Collection
       proxy_help: "Please Note: Your proxies can do anything on your behalf in Scholar@UC. Be selective in who you give proxy access. If you authorize a proxy they can create and upload files on your behalf as well as edit, or delete those corresponding works and files. The proxy relationship can be revoked by the owner at any time. Use work-specific editors for more fine-grained access control."
     welcome:
       waive_page: "Click here to hide this welcome page from displaying when you log in"
