--- a/config/locales/hyrax.en.yml
+++ b/config/locales/hyrax.en.yml
@@ -61,6 +61,9 @@ en:
     batch_uploads:
       files:
         upload_type_instructions: 'Note: To create a single work for all the files, '
+    collections:
+      show:
+        works_in_collection: Items in this Collection
     contact_form:
       header: Contact the Scholar@UC Team
       notice_html: 'Please us this form to send questions, feedback, or report a problem to the Scholar@UC team. You can also check %{href} for more information'
